<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.apache.ode</groupId>
		<artifactId>ode-pom</artifactId>
		<version>0.1-SNAPSHOT</version>
		<relativePath>../</relativePath>
	</parent>
	<artifactId>ode-build-parent</artifactId>
	<packaging>pom</packaging>
	<name>ODE-X - Build Parent</name>


	<!-- mvn versions:display-dependency-updates versions:display-plugin-updates -->
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<maven.compiler.source>10</maven.compiler.source>
		<maven.compiler.target>10</maven.compiler.target>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.ode</groupId>
				<artifactId>ode-bom</artifactId>
				<type>pom</type>
				<version>${project.version}</version>
				<scope>import</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>10</release>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.22.1</version>
				<configuration>
					<includes>
						<include>**/*Tests.java,**/*Test.java</include>
					</includes>
					<!-- Ignite JVM 9+ arguments -->
					<argLine>-XX:+AggressiveOpts
						--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED
						--add-exports=java.base/sun.nio.ch=ALL-UNNAMED
						--add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
						--add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
						--add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
						--illegal-access=permit --add-modules=java.transaction
						--add-modules=java.xml.bind</argLine>
				</configuration>
			</plugin>
		</plugins>
	</build>



</project>